# demodock

./: .env  AGENTS.md  AI_VNC_GUIDE.md  ARCHITECTURE.md  CUSTOM_DESKTOP_IFLOW_IMAGE.md  Dockerfile.desktop-iflow  README.md  README_DEMO.md  README_VNC.md  ai_browser_chat.html  ai_studio_code (16).html  ai_vm_control.py  ai_vm_demo.bat  browser_mcp_demo.css  browser_mcp_demo.html  browser_mcp_demo.js  build_desktop_iflow.sh  demo.html  demo.py  demo_acp_test.py  desktop_iflow_acp.py  desktop_iflow_demo.py  desktop_iflow_demo_final.py  desktop_iflow_demo_short.py  get_devtools_urls.py  iflow_browser_server.py  index.html  install_novnc.bat  main.py  mcp_client_node.js  mcp_client_simple.py  package.json  proxy_server.py  proxy_server_fastapi.py  pyproject.toml  sandbox_config.toml  screencast_viewer.html  simple_server.py  start_all.bat  start_demo.sh  (+11 more)
.iflow/: settings.json
.iflow/skills/system-control/: SKILL.md
.iflow/skills/uefi-control/: SKILL.md
.iflow/skills/vnc-control/: SKILL.md
frontend/: index.html
src/: mcp_vnc_server.py  server.py
src/skills/: __init__.py  system_skill.py  uefi_skill.py  vnc_skill.py
