[project]
name = "demodock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "iflow-cli-sdk==0.1.11",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "vncdotool>=1.2.0",
    "pillow>=10.0.0",
    "paramiko>=3.0.0",
    "websockify>=0.12.0",
]
