[project]
name = "demodock"
version = "0.2.0"
description = "iFlow DemoDock - VNC 远程控制与浏览器自动化平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "iflow-cli-sdk==0.1.11",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "vncdotool>=1.2.0",
    "pillow>=10.0.0",
    "paramiko>=3.0.0",
    "websockify>=0.12.0",
    "fastmcp>=0.1.0",
]

[project.scripts]
vnc-mcp = "src.mcp_vnc_server:run_mcp_server"
